# JenkinsExample

./: .gitignore  CMakeLists.txt  Jenkinsfile
include/: hello_word.hpp
src/: hello_word.cpp  main.cpp
test/: CMakeLists.txt  hello_word_test.cpp
